Refactoring using Claude Code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ECS Demo</title>
+  <title>ExampleApp</title>
   <script>
     function load() {
       setTimeout(function() {location=''}, 150)
